# feature-gating

./: .dockerignore  .env.example  .gitignore  CHANGES.md  Dockerfile  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  README.md  USAGE.md  docker-compose.yml  pyproject.toml  test_api.py
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  database.py  deps.py  main.py  package.json  pnpm-lock.yaml  tailwind.config.js
app/models/: project.py  snapshot.py  user.py
app/routers/: admin.py  auth.py  fg.py  pages.py  projects.py  snapshots.py
app/schemas/: project.py  snapshot.py  user.py
app/services/: auth.py  cache.py  evaluator.py  hash.py
app/src/: styles.css
app/static/: app.js
app/templates/: admin.html  base.html  index.html  login.html
app/templates/components/: item_card.html  project_list.html  toast.html
